# RustWatch

./: .gitignore  Cargo.toml  LICENSE  README.md  run.cmd  run.sh
src/: app_state.rs  checker.rs  cli.rs  main.rs  notifier.rs  notifier_manager.rs  state.rs  stats.rs  storage.rs  telegram.rs  whatsapp.rs
