[package]
name = "monitor-daemon"
version = "0.4.0"
edition = "2024"
authors = ["MonsterWhat"]

[dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.13", features = ["rustls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"

whatsapp-rust = "0.2"
waproto = "0.2"
wacore = "0.2"
wacore-binary = "0.2"
whatsapp-rust-sqlite-storage = "0.2"
whatsapp-rust-tokio-transport = "0.2"
whatsapp-rust-ureq-http-client = "0.2"
qr2term = "0.3"
